I have no way of explaining this session. It was all day, hangin' with AI, realized a new type of algebra based on computation, not objects. implemented it, ran into a nest of issues in the rewrite engine...reverted. kept some parts.... I dunno. I was intense.